// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Delete Post Controller Snapshot Test for author not found. 1`] = `
{
  "body": {
    "message": "User not found.",
    "success": false,
  },
  "status": 404,
}
`;

exports[`Delete Post Controller Snapshot Test for internal server error. 1`] = `
{
  "body": {
    "message": "Something went wrong. Please try again later.",
    "success": false,
  },
  "status": 500,
}
`;

exports[`Delete Post Controller Snapshot Test for no permission to delete post. 1`] = `
{
  "body": {
    "message": "You do not have permission to delete this article.",
    "success": false,
  },
  "status": 403,
}
`;

exports[`Delete Post Controller Snapshot Test for not valid post Id. 1`] = `
{
  "body": {
    "message": "Invalid user ID or post ID.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Delete Post Controller Snapshot Test for not valid user Id. 1`] = `
{
  "body": {
    "message": "Invalid user ID or post ID.",
    "success": false,
  },
  "status": 400,
}
`;

exports[`Delete Post Controller Snapshot Test for post deleted successfully. 1`] = `
{
  "body": {
    "data": null,
    "message": "Article deleted successfully.",
    "success": true,
  },
  "status": 200,
}
`;

exports[`Delete Post Controller Snapshot Test for post not found. 1`] = `
{
  "body": {
    "message": "Article not found.",
    "success": false,
  },
  "status": 404,
}
`;

exports[`Delete Post Controller Snapshot Test for user Id or post Id not found. 1`] = `
{
  "body": {
    "message": "User ID or post ID not found.",
    "success": false,
  },
  "status": 404,
}
`;
